# spmt

./: Args.cpp  Args.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Data.cpp  Data.hpp  Defines.hpp  Package.cpp  Package.hpp  README.md  Version.cpp  Version.hpp  main.cpp
hellopkg/: info.json
hellopkg/scripts/: postinst  preinst
spmtpkg/: info.json
